[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Network_setup.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[node name="Network_Setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer_config" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Host_Server" type="Button" parent="Multiplayer_config"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -108.0
margin_right = 112.0
margin_bottom = -31.0

[node name="Label" type="Label" parent="Multiplayer_config/Host_Server"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -14.5
margin_right = 37.0
margin_bottom = 22.5
custom_fonts/font = SubResource( 1 )
text = "HOST"
align = 1

[node name="set_to_local" type="Button" parent="Multiplayer_config"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 195.0
margin_top = -187.0
margin_right = 306.0
margin_bottom = -149.0
custom_fonts/font = SubResource( 4 )

[node name="Label" type="Label" parent="Multiplayer_config/set_to_local"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -12.0
margin_right = 41.5
margin_bottom = 8.0
custom_fonts/font = SubResource( 5 )
text = "LOCALHOST"
align = 1

[node name="Join_Server" type="Button" parent="Multiplayer_config"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 25.5
margin_right = 112.0
margin_bottom = 102.5

[node name="Label" type="Label" parent="Multiplayer_config/Join_Server"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -20.0
margin_right = 26.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "JOIN"
align = 1

[node name="server_ip" type="LineEdit" parent="Multiplayer_config"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -178.0
margin_top = 110.0
margin_right = 178.0
margin_bottom = 151.0
rect_scale = Vector2( 0.997717, 1.01887 )
custom_fonts/font = SubResource( 2 )
align = 1
placeholder_text = "ENTER IP ADDRESS"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="device_ip" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -77.0
margin_right = -1.0
align = 1

[node name="Start" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -52.0
margin_right = 112.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="CanvasLayer/Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -7.0
margin_right = 40.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 6 )
text = "START GAME"
align = 1
[connection signal="pressed" from="Multiplayer_config/Host_Server" to="." method="_on_Host_Server_pressed"]
[connection signal="pressed" from="Multiplayer_config/set_to_local" to="." method="_on_set_to_local_pressed"]
[connection signal="pressed" from="Multiplayer_config/Join_Server" to="." method="_on_Join_Server_pressed"]
[connection signal="pressed" from="CanvasLayer/Start" to="." method="_on_Host_Server_pressed"]
[connection signal="pressed" from="CanvasLayer/Start" to="." method="_on_Start_Btn_pressed"]
